# ag23-llm

./: .env.example  .gitignore  LICENSE  README.md  link_into_venv.py  pyproject.toml  requirements.txt
ag23_llm/: __init__.py  benchmarks.json  cli.py  config.py  config_gen.py  gateway.py  providers.json  registry.py  taskrouter.py  telemetry.py  types.py
scout/: __init__.py  __main__.py  browse.py  scout.py  trace.py
tests/: test_local_provider.py
